--- a/try.html
+++ b/try.html
@@ -723,7 +723,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/gitter/room/nwjs/nw.js.svg</code></td>
   </tr>
   <tr><th> JIRA issue: </th>
-    <td><img src='jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg' alt=''/></td>
+    <td><img src='/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg' alt=''/></td>
     <td><code>https://img.shields.io/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg</code></td>
   </tr>
 </tbody></table>
