website: Magnum CI + JIRA issues

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1/master.svg</code></td>
   </tr>
+  <tr><th> Magnum CI: </th>
+    <td><img src='https://img.shields.io/magnumci/ci/96ffb83fa700f069024921b0702e76ff.svg' alt=''/></td>
+    <td><code>https://img.shields.io/magnumci/ci/96ffb83fa700f069024921b0702e76ff.svg</code></td>
+  </tr>
+  <tr><th> Magnum CI: </th>
+    <td><img src='https://img.shields.io/magnumci/ci/96ffb83fa700f069024921b0702e76ff/new-meta.svg' alt=''/></td>
+    <td><code>https://img.shields.io/magnumci/ci/96ffb83fa700f069024921b0702e76ff/new-meta.svg</code></td>
+  </tr>
   <tr><th> CircleCI: </th>
       <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg</code></td>
@@ -715,6 +723,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/gitter/room/nwjs/nw.js.svg' alt=''/></td>
     <td><code>https://img.shields.io/gitter/room/nwjs/nw.js.svg</code></td>
   </tr>
+  <tr><th> JIRA issue: </th>
+    <td><img src='https://img.shields.io/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg' alt=''/></td>
+    <td><code>https://img.shields.io/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
@@ -746,6 +758,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Ansible Role: </th>
     <td><img src='https://img.shields.io/ansible/role/3078.svg' alt=''/></td>
     <td><code>https://img.shields.io/ansible/role/3078.svg</code></td>
+  </tr>
+  <tr><th> StackExchange: </th>
+    <td><img src='https://img.shields.io/stackexchange/tex/r/951.svg' alt=''/></td>
+    <td><code>https://img.shields.io/stackexchange/tex/r/951.svg</code></td>
+  </tr>
+  <tr><th> StackExchange: </th>
+  <td><img src='https://img.shields.io/stackexchange/stackoverflow/t/augeas.svg' alt=''/></td>
+  <td><code>https://img.shields.io/stackexchange/stackoverflow/t/augeas.svg</code></td>
   </tr>
 </tbody></table>
 
