feat(bower): add /dt support

--- a/try.html
+++ b/try.html
@@ -263,6 +263,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/gem/dt/rails.svg' alt=''/></td>
   <td><code>https://img.shields.io/gem/dt/rails.svg</code></td>
   </tr>
+  <tr><th> Bower: </th>
+  <td><img src='/dt/bootstrap.svg' alt=''/></td>
+  <td><code>https://img.shields.io/bower/dt/bootstrap.svg</code></td>
+  </tr>
   <tr><th> NuGet: </th>
   <td><img src='/nuget/dt/Microsoft.AspNet.Mvc.svg' alt=''/></td>
   <td><code>https://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg</code></td>
