--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/gem/dt/rails.svg' alt=''/></td>
   <td><code>https://img.shields.io/gem/dt/rails.svg</code></td>
   </tr>
+  <tr><th> Bower: </th>
+  <td><img src='https://img.shields.io/bower/dt/bootstrap.svg' alt=''/></td>
+  <td><code>https://img.shields.io/bower/dt/bootstrap.svg</code></td>
+  </tr>
   <tr><th> NuGet: </th>
   <td><img src='https://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg' alt=''/></td>
   <td><code>https://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg</code></td>
