--- a/try.html
+++ b/try.html
@@ -44,7 +44,8 @@ hr.spacing { border: 0; display: block; height: 3mm; }
   border-bottom: 15px solid #eaeaff;
 }
 #suggestButton { display: none; }
-table.badge > tbody > tr > td > img { cursor: pointer; }
+table.badge > tbody > tr > td > img,
+table.badge > tbody > tr > td > code { cursor: pointer; }
 </style>
 
 <main id='main'>
@@ -1156,14 +1157,6 @@ function selectNode(e) {
 };
 copyMarkdown.addEventListener('click', selectNode);
 copyreStructuredText.addEventListener('click', selectNode);
-function autoselectCode() {
-  var codes = document.querySelectorAll('table.badge code');
-  for (var i = 0; i < codes.length; i++) {
-    codes[i].addEventListener('click', selectNode);
-  }
-}
-
-document.addEventListener('DOMContentLoaded', autoselectCode);
 
 // Markup copier dialog
 //
@@ -1173,9 +1166,11 @@ function markupDialogInit() {
   for (var i = 0; i < trs.length; i++) {
     var tr = trs[i];
     var target = tr.querySelector('img');
-    if (target) {
-      target.addEventListener('click', makeMarkupDialogListener(tr));
-    }
+    var code = tr.querySelector('code');
+    // Markup dialog listener.
+    var mdl = makeMarkupDialogListener(tr);
+    if (target != null) { target.addEventListener('click', mdl); }
+    if (code != null) { code.addEventListener('click', mdl); }
   }
 }
 function makeMarkupDialogListener(tr) {
