--- a/try.html
+++ b/try.html
@@ -737,6 +737,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg' alt=''/></td>
     <td><code>https://img.shields.io/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg</code></td>
   </tr>
+  <tr><th> Maintenance: </th>
+    <td><img src='/maintenance/yes/2016.svg' alt=''/></td>
+    <td><code>https://img.shields.io/maintenance/yes/2016.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
