NuGet: use API v3
The v2 API returned XML even though we asked for JSON.

MyGet is still not working.

Part of #655.

--- a/index.html
+++ b/index.html
@@ -272,14 +272,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/gem/dt/rails.svg' alt=''/></td>
   <td><code>https://img.shields.io/gem/dt/rails.svg</code></td>
   </tr>
-  <tr><th> NuGet: </th>
-  <td><img src='https://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg' alt=''/></td>
-  <td><code>https://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg</code></td>
-  </tr>
-  <tr><th> MyGet: </th>
-  <td><img src='https://img.shields.io/myget/yolodev/dt/FSharpSupport.svg' alt=''/></td>
-  <td><code>https://img.shields.io/myget/yolodev/dt/FSharpSupport.svg</code></td>
-  </tr>
   <tr><th> Chocolatey: </th>
   <td><img src='https://img.shields.io/chocolatey/dt/scriptcs.svg' alt=''/></td>
   <td><code>https://img.shields.io/chocolatey/dt/scriptcs.svg</code></td>
@@ -472,8 +464,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/nuget/v/Nuget.Core.svg</code></td>
   </tr>
   <tr><th> NuGet Pre Release: </th>
-  <td><img src='https://img.shields.io/nuget/vpre/Nuget.Core.svg' alt=''/></td>
-  <td><code>https://img.shields.io/nuget/vpre/Nuget.Core.svg</code></td>
+  <td><img src='https://img.shields.io/nuget/vpre/Microsoft.AspNet.Mvc.svg' alt=''/></td>
+  <td><code>https://img.shields.io/nuget/vpre/Microsoft.AspNet.Mvc.svg</code></td>
   </tr>
   <tr><th> MyGet: </th>
   <td><img src='https://img.shields.io/myget/yolodev/v/FSharpSupport.svg' alt=''/></td>
