--- a/try.html
+++ b/try.html
@@ -271,14 +271,6 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/gem/dt/rails.svg' alt=''/></td>
   <td><code>https://img.shields.io/gem/dt/rails.svg</code></td>
   </tr>
-  <tr><th> NuGet: </th>
-  <td><img src='/nuget/dt/Microsoft.AspNet.Mvc.svg' alt=''/></td>
-  <td><code>https://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg</code></td>
-  </tr>
-  <tr><th> MyGet: </th>
-  <td><img src='/myget/yolodev/dt/FSharpSupport.svg' alt=''/></td>
-  <td><code>https://img.shields.io/myget/yolodev/dt/FSharpSupport.svg</code></td>
-  </tr>
   <tr><th> Chocolatey: </th>
   <td><img src='/chocolatey/dt/scriptcs.svg' alt=''/></td>
   <td><code>https://img.shields.io/chocolatey/dt/scriptcs.svg</code></td>
@@ -471,8 +463,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/nuget/v/Nuget.Core.svg</code></td>
   </tr>
   <tr><th> NuGet Pre Release: </th>
-  <td><img src='/nuget/vpre/Nuget.Core.svg' alt=''/></td>
-  <td><code>https://img.shields.io/nuget/vpre/Nuget.Core.svg</code></td>
+  <td><img src='/nuget/vpre/Microsoft.AspNet.Mvc.svg' alt=''/></td>
+  <td><code>https://img.shields.io/nuget/vpre/Microsoft.AspNet.Mvc.svg</code></td>
   </tr>
   <tr><th> MyGet: </th>
   <td><img src='/myget/yolodev/v/FSharpSupport.svg' alt=''/></td>
