--- a/index.html
+++ b/index.html
@@ -468,12 +468,12 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/nuget/vpre/Microsoft.AspNet.Mvc.svg</code></td>
   </tr>
   <tr><th> MyGet: </th>
-  <td><img src='https://img.shields.io/myget/yolodev/v/FSharpSupport.svg' alt=''/></td>
-  <td><code>https://img.shields.io/myget/yolodev/v/FSharpSupport.svg</code></td>
+  <td><img src='https://img.shields.io/myget/mongodb/v/MongoDB.Driver.Core.svg' alt=''/></td>
+  <td><code>https://img.shields.io/myget/mongodb/v/MongoDB.Driver.Core.svg</code></td>
   </tr>
   <tr><th> MyGet Pre Release: </th>
-  <td><img src='https://img.shields.io/myget/yolodev/vpre/FSharpSupport.svg' alt=''/></td>
-  <td><code>https://img.shields.io/myget/yolodev/vpre/FSharpSupport.svg</code></td>
+  <td><img src='https://img.shields.io/myget/yolodev/vpre/YoloDev.Dnx.FSharp.svg' alt=''/></td>
+  <td><code>https://img.shields.io/myget/yolodev/vpre/YoloDev.Dnx.FSharp.svg</code></td>
   </tr>
   <tr><th> Chocolatey: </th>
   <td><img src='https://img.shields.io/chocolatey/v/git.svg' alt=''/></td>
