(GH-638) Added basic badge integration for homebrew

--- a/try.html
+++ b/try.html
@@ -518,6 +518,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/aur/version/yaourt.svg' alt=''/></td>
   <td><code>https://img.shields.io/aur/version/yaourt.svg</code></td>
   </tr>
+  <tr><th data-keywords='homebrew'> homebrew: </th>
+  <td><img src='/homebrew/v/cake.svg' alt=''/></td>
+  <td><code>https://img.shields.io/homebrew/v/cake.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="social"> Social </h3>
