--- a/index.html
+++ b/index.html
@@ -515,6 +515,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/dub/v/vibe-d.svg' alt=''/></td>
   <td><code>https://img.shields.io/dub/v/vibe-d.svg</code></td>
   </tr>
+  <tr><th data-keywords='homebrew'> homebrew: </th>
+  <td><img src='https://img.shields.io/homebrew/v/cake.svg' alt=''/></td>
+  <td><code>https://img.shields.io/homebrew/v/cake.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="social"> Social </h3>
