website: sourceforge + bithound

--- a/index.html
+++ b/index.html
@@ -340,6 +340,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/sourceforge/dt/sevenzip.svg' alt=''/></td>
   <td><code>https://img.shields.io/sourceforge/dt/sevenzip.svg</code></td>
   </tr>
+  <tr><th> SourceForge: </th>
+  <td><img src='https://img.shields.io/sourceforge/dt/arianne/stendhal.svg' alt=''/></td>
+  <td><code>https://img.shields.io/sourceforge/dt/arianne/stendhal.svg</code></td>
+  </tr>
   <tr><th data-keywords='atom'> apm: </th>
   <td><img src='https://img.shields.io/apm/dm/vim-mode.svg' alt=''/></td>
   <td><code>https://img.shields.io/apm/dm/vim-mode.svg</code></td>
@@ -563,6 +567,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg</code></td>
   </tr>
+  <tr><th> bitHound: </th>
+    <td><img src='https://img.shields.io/bithound/code/github/rexxars/sse-channel.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bithound/code/github/rexxars/sse-channel.svg</code></td>
+  </tr>
   <tr><th> Gemnasium: </th>
     <td><img src='https://img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
     <td><code>https://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
@@ -754,6 +762,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> David: </th>
     <td><img src='https://img.shields.io/david/peer/webcomponents/generator-element.svg' alt=''/></td>
     <td><code>https://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
+  </tr>
+  <tr><th> bitHound: </th>
+    <td><img src='https://img.shields.io/bithound/dependencies/github/rexxars/sse-channel.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bithound/dependencies/github/rexxars/sse-channel.svg</code></td>
+  </tr>
+  <tr><th> bitHound: </th>
+    <td><img src='https://img.shields.io/bithound/devDependencies/github/rexxars/sse-channel.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bithound/devDependencies/github/rexxars/sse-channel.svg</code></td>
   </tr>
   <tr><th> CocoaPods: </th>
     <td><img src='https://img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
