--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/token/YOURTOKEN/project/BrightFlair/PHP.Gt/master.svg</code></td>
   </tr>
-  <tr><th data-doc='visualStudioTeamServices'> Visual Studio Team Services: </th>
+  <tr><th data-doc='visualStudioTeamServices'> Visual Studio Team services: </th>
       <td><img src='https://img.shields.io/vso/build/larsbrinkhoff/953a34b9-5966-4923-a48a-c41874cfb5f5/1.svg' alt=''/></td>
       <td><code>https://img.shields.io/vso/build/larsbrinkhoff/953a34b9-5966-4923-a48a-c41874cfb5f5/1.svg</code></td>
   </tr>
@@ -566,6 +566,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Code Climate: </th>
     <td><img src='https://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg' alt=''/></td>
     <td><code>https://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg</code></td>
+  </tr>
+  <tr><th> Code Climate: </th>
+    <td><img src='https://img.shields.io/codeclimate/issues/github/me-and/mdf.svg' alt=''/></td>
+    <td><code>https://img.shields.io/codeclimate/issues/github/me-and/mdf.svg</code></td>
   </tr>
   <tr><th> bitHound: </th>
     <td><img src='https://img.shields.io/bithound/code/github/rexxars/sse-channel.svg' alt=''/></td>
