--- a/try.html
+++ b/try.html
@@ -746,6 +746,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/maintenance/yes/2016.svg' alt=''/></td>
     <td><code>https://img.shields.io/maintenance/yes/2016.svg</code></td>
   </tr>
+  <tr><th> Waffle.io: </th>
+    <td><img src='/waffle/column/potherca/GraphvizWebEditor/waffle:%20in%20progress.svg' alt=''/></td>
+    <td><code>https://img.shields.io/waffle/column/potherca/GraphvizWebEditor/waffle:%20in%20progress.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
