--- a/try.html
+++ b/try.html
@@ -747,8 +747,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/maintenance/yes/2016.svg</code></td>
   </tr>
   <tr><th> Waffle.io: </th>
-    <td><img src='/waffle/column/potherca/GraphvizWebEditor/waffle:%20in%20progress.svg' alt=''/></td>
-    <td><code>https://img.shields.io/waffle/column/potherca/GraphvizWebEditor/waffle:%20in%20progress.svg</code></td>
+    <td><img src='/waffle/cards/evancohen/smart-mirror/in%20progress.svg' alt=''/></td>
+    <td><code>https://img.shields.io/cards/column/evancohen/smart-mirror/in%20progress.svg</code></td>
   </tr>
 </tbody></table>
 
