--- a/try.html
+++ b/try.html
@@ -662,6 +662,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/issues-raw/badges/shields.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub'> label:</th>
+    <td><img src='/github/issues-raw/badges/shields/website.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-raw/badges/shields/website.svg</code></td>
+  </tr>
   <tr><th data-keywords='github license'> GitHub license: </th>
     <td><img src='/github/license/mashape/apistatus.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
