GitHub label, Waffle label

--- a/index.html
+++ b/index.html
@@ -663,6 +663,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/github/issues-raw/badges/shields.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub'> label:</th>
+    <td><img src='https://img.shields.io/github/issues-raw/badges/shields/website.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-raw/badges/shields/website.svg</code></td>
+  </tr>
   <tr><th data-keywords='github license'> GitHub license: </th>
     <td><img src='https://img.shields.io/github/license/mashape/apistatus.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
@@ -748,8 +752,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/maintenance/yes/2016.svg</code></td>
   </tr>
   <tr><th> Waffle.io: </th>
-    <td><img src='https://img.shields.io/waffle/column/potherca/GraphvizWebEditor/waffle:%20in%20progress.svg' alt=''/></td>
-    <td><code>https://img.shields.io/waffle/column/potherca/GraphvizWebEditor/waffle:%20in%20progress.svg</code></td>
+    <td><img src='https://img.shields.io/waffle/label/evancohen/smart-mirror/in%20progress.svg' alt=''/></td>
+    <td><code>https://img.shields.io/waffle/label/evancohen/smart-mirror/in%20progress.svg</code></td>
   </tr>
 </tbody></table>
 
