--- a/try.html
+++ b/try.html
@@ -514,6 +514,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/dub/v/vibe-d.svg' alt=''/></td>
   <td><code>https://img.shields.io/dub/v/vibe-d.svg</code></td>
   </tr>
+  <tr><th data-keywords='aur'> AUR: </th>
+  <td><img src='/aur/version/yaourt.svg' alt=''/></td>
+  <td><code>https://img.shields.io/aur/version/yaourt.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="social"> Social </h3>
@@ -541,6 +545,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Twitter Follow: </th>
   <td><img src='/twitter/follow/shields_io.svg?style=social' alt=''/></td>
   <td><code>https://img.shields.io/twitter/follow/shields_io.svg?style=social</code></td>
+  </tr>
+  <tr><th data-keywords='aur'> AUR: </th>
+  <td><img src='/aur/votes/yaourt.svg' alt=''/></td>
+  <td><code>https://img.shields.io/aur/votes/yaourt.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -749,6 +757,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Maintenance: </th>
     <td><img src='/maintenance/yes/2016.svg' alt=''/></td>
     <td><code>https://img.shields.io/maintenance/yes/2016.svg</code></td>
+  <tr><th data-keywords='aur'> AUR: </th>
+    <td><img src='/aur/license/yaourt.svg' alt=''/></td>
+    <td><code>https://img.shields.io/aur/license/yaourt.svg</code></td>
   </tr>
   <tr><th> Waffle.io: </th>
     <td><img src='/waffle/label/evancohen/smart-mirror/in%20progress.svg' alt=''/></td>
