--- a/index.html
+++ b/index.html
@@ -515,6 +515,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/dub/v/vibe-d.svg' alt=''/></td>
   <td><code>https://img.shields.io/dub/v/vibe-d.svg</code></td>
   </tr>
+  <tr><th data-keywords='aur'> AUR: </th>
+  <td><img src='https://img.shields.io/aur/version/yaourt.svg' alt=''/></td>
+  <td><code>https://img.shields.io/aur/version/yaourt.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="social"> Social </h3>
@@ -542,6 +546,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Twitter Follow: </th>
   <td><img src='https://img.shields.io/twitter/follow/shields_io.svg?style=social' alt=''/></td>
   <td><code>https://img.shields.io/twitter/follow/shields_io.svg?style=social</code></td>
+  </tr>
+  <tr><th data-keywords='aur'> AUR: </th>
+  <td><img src='https://img.shields.io/aur/votes/yaourt.svg' alt=''/></td>
+  <td><code>https://img.shields.io/aur/votes/yaourt.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -750,6 +758,9 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> Maintenance: </th>
     <td><img src='https://img.shields.io/maintenance/yes/2016.svg' alt=''/></td>
     <td><code>https://img.shields.io/maintenance/yes/2016.svg</code></td>
+  <tr><th data-keywords='aur'> AUR: </th>
+    <td><img src='https://img.shields.io/aur/license/yaourt.svg' alt=''/></td>
+    <td><code>https://img.shields.io/aur/license/yaourt.svg</code></td>
   </tr>
   <tr><th> Waffle.io: </th>
     <td><img src='https://img.shields.io/waffle/label/evancohen/smart-mirror/in%20progress.svg' alt=''/></td>
