website update with maxAge fix

--- a/index.html
+++ b/index.html
@@ -1251,6 +1251,8 @@ function markupDialog(tr) {
   var trimg = tr.querySelector('img').src;
   var th = tr.firstElementChild;
   var link = th.dataset.link? th.dataset.link: '';
+  // Remove the ?maxAge parameter from the query string.
+  link.replace(/[\?&]maxAge=\d+$|maxAge=\d+&/, '');
   copyForm.img.value = trimg;
   copyForm.url.value = link;
   // Insert documentation.
