--- a/try.html
+++ b/try.html
@@ -682,9 +682,17 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/issues-raw/badges/shields/website.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields/website.svg</code></td>
   </tr>
-  <tr><th data-keywords='github license'> GitHub license: </th>
+  <tr><th data-keywords='GitHub license'> license: </th>
     <td><img src='/github/license/mashape/apistatus.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
+  </tr>
+  <tr><th> Bitbucket issues: </th>
+    <td><img src='/bitbucket/issues/atlassian/python-bitbucket.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bitbucket/issues/atlassian/python-bitbucket.svg</code></td>
+  </tr>
+  <tr><th data-keywords='Bitbucket'></th>
+    <td><img src='/bitbucket/issues-raw/atlassian/python-bitbucket.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bitbucket/issues-raw/atlassian/python-bitbucket.svg</code></td>
   </tr>
   <tr><th> WordPress rating: </th>
     <td><img src='/wordpress/plugin/r/akismet.svg' alt=''/></td>
