--- a/index.html
+++ b/index.html
@@ -683,9 +683,17 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/github/issues-raw/badges/shields/website.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields/website.svg</code></td>
   </tr>
-  <tr><th data-keywords='github license'> GitHub license: </th>
+  <tr><th data-keywords='GitHub license'> license: </th>
     <td><img src='https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
+  </tr>
+  <tr><th> Bitbucket issues: </th>
+    <td><img src='https://img.shields.io/bitbucket/issues/atlassian/python-bitbucket.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/bitbucket/issues/atlassian/python-bitbucket.svg</code></td>
+  </tr>
+  <tr><th data-keywords='Bitbucket'></th>
+    <td><img src='https://img.shields.io/bitbucket/issues-raw/atlassian/python-bitbucket.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/bitbucket/issues-raw/atlassian/python-bitbucket.svg</code></td>
   </tr>
   <tr><th> WordPress rating: </th>
     <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg?maxAge=2592000' alt=''/></td>
