website: document ?maxAge

--- a/try.html
+++ b/try.html
@@ -929,6 +929,8 @@ Here are a few other parameters you can use:
   <tr><td><code>?link=http://abc.xyz&amp;link=http://shields.io</code></td>
     <td>Specify what clicking on the left/right of a badge should do (esp. for
       social badge style)</td></tr>
+  <tr><td><code>?maxAge=3600</code></td>
+    <td>Set the HTTP cache lifetime in secs</td></tr>
 </tbody></table>
 
 <p>
