--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/chrome-web-store/v/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
   <tr><th> homebrew: </th>
-  <td><img src='https://img.shields.io/homebrew/v/cake.svg' alt=''/></td>
+  <td><img src='https://img.shields.io/homebrew/v/cake.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/homebrew/v/cake.svg</code></td>
   </tr>
 </tbody></table>
