website: document MyGet tenants
Part of #679.

--- a/try.html
+++ b/try.html
@@ -482,6 +482,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/myget/yolodev/vpre/YoloDev.Dnx.FSharp.svg' alt=''/></td>
   <td><code>https://img.shields.io/myget/yolodev/vpre/YoloDev.Dnx.FSharp.svg</code></td>
   </tr>
+  <tr><th> MyGet tenant: </th>
+  <td><img src='/dotnet.myget/dotnet-coreclr/v/Microsoft.DotNet.CoreCLR.svg' alt=''/></td>
+  <td><code>https://img.shields.io/dotnet.myget/dotnet-coreclr/v/Microsoft.DotNet.CoreCLR.svg</code></td>
+  </tr>
   <tr><th> Chocolatey: </th>
   <td><img src='/chocolatey/v/git.svg' alt=''/></td>
   <td><code>https://img.shields.io/chocolatey/v/git.svg</code></td>
