website: MyGet tenant

--- a/index.html
+++ b/index.html
@@ -483,6 +483,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/myget/yolodev/vpre/YoloDev.Dnx.FSharp.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/myget/yolodev/vpre/YoloDev.Dnx.FSharp.svg</code></td>
   </tr>
+  <tr><th> MyGet tenant: </th>
+  <td><img src='https://img.shields.io/dotnet.myget/dotnet-coreclr/v/Microsoft.DotNet.CoreCLR.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/dotnet.myget/dotnet-coreclr/v/Microsoft.DotNet.CoreCLR.svg</code></td>
+  </tr>
   <tr><th> Chocolatey: </th>
   <td><img src='https://img.shields.io/chocolatey/v/git.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/chocolatey/v/git.svg</code></td>
