--- a/index.html
+++ b/index.html
@@ -583,6 +583,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/bountysource/team/mozilla-core/activity.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/bountysource/team/mozilla-core/activity.svg</code></td>
   </tr>
+  <tr><th> Beerpay: </th>
+    <td><img src='https://img.shields.io/beerpay/hashdog/scrapfy-chrome-extension.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/beerpay/hashdog/scrapfy-chrome-extension.svg</code></td>
+  </tr>
   <tr><th> Code Climate: </th>
     <td><img src='https://img.shields.io/codeclimate/github/kabisaict/flow.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
