Twitter follow badge adjustment
It has an @ for parity with official buttons.

--- a/index.html
+++ b/index.html
@@ -560,12 +560,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/twitter/url/http/shields.io.svg?style=social</code></td>
   </tr>
   <tr><th> Twitter Follow: </th>
-  <td><img src='https://img.shields.io/twitter/follow/shields_io.svg?style=social&maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/twitter/follow/shields_io.svg?style=social</code></td>
-  </tr>
-  <tr><th data-keywords='aur'> AUR: </th>
-  <td><img src='https://img.shields.io/aur/votes/yaourt.svg?maxAge=2592000' alt=''/></td>
-  <td><code>https://img.shields.io/aur/votes/yaourt.svg</code></td>
+  <td><img src='https://img.shields.io/twitter/follow/shields_io.svg?style=social&label=Follow&maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/twitter/follow/shields_io.svg?style=social&amp;label=Follow</code></td>
   </tr>
 </tbody></table>
 
@@ -806,6 +802,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/chrome-web-store/rating-count/nimelepbpejjlbmoobocpfnjhihnpked.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/chrome-web-store/rating-count/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
+  <tr><th data-keywords='aur'> AUR: </th>
+    <td><img src='https://img.shields.io/aur/votes/yaourt.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/aur/votes/yaourt.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="miscellaneous"> Longer Miscellaneous </h3>
@@ -958,9 +958,7 @@ Tell your favorite badge service to use it! <br/>
 And tell us, we might be able to bring it to you anyway!
 </p>
 <p>
-<a href="https://twitter.com/Shields_io" class="twitter-follow-button"
-  data-show-count="false">Follow @Shields_io</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<a href='https://twitter.com/Shields_io'><img src='https://img.shields.io/twitter/follow/shields_io.svg?style=social&label=Follow&maxAge=2592000' alt='Follow @shields_io'></a>
 <a href='https://www.gratipay.com/Shields/'><img src='https://img.shields.io/gratipay/Shields.svg?style=social&label=Donate&maxAge=2592000' alt='Donate to us!'/></a>
 <iframe src="http://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
   style="border:0; background-color:transparent"
