--- a/try.html
+++ b/try.html
@@ -559,8 +559,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/twitter/url/http/shields.io.svg?style=social</code></td>
   </tr>
   <tr><th> Twitter Follow: </th>
-  <td><img src='/twitter/follow/shields_io.svg?style=social' alt=''/></td>
-  <td><code>https://img.shields.io/twitter/follow/shields_io.svg?style=social</code></td>
+  <td><img src='/twitter/follow/shields_io.svg?style=social&label=Follow' alt=''/></td>
+  <td><code>https://img.shields.io/twitter/follow/shields_io.svg?style=social&amp;label=Follow</code></td>
   </tr>
 </tbody></table>
 
