--- a/index.html
+++ b/index.html
@@ -715,6 +715,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686/master.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686/master.svg</code></td>
   </tr>
+  <tr><th> Cauditor: </th>
+    <td><img src='https://img.shields.io/cauditor/mi/matthiasmullie/scrapbook/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/cauditor/mi/matthiasmullie/scrapbook/master.svg</code></td>
+  </tr>
   <tr><th> Libscore: </th>
     <td><img src='https://img.shields.io/libscore/s/jQuery.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/libscore/s/jQuery.svg</code></td>
