--- a/try.html
+++ b/try.html
@@ -714,6 +714,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/codacy/e27821fb6289410b8f58338c7e0bc686/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686/master.svg</code></td>
   </tr>
+  <tr><th> Cauditor: </th>
+    <td><img src='/cauditor/mi/matthiasmullie/scrapbook/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/cauditor/mi/matthiasmullie/scrapbook/master.svg</code></td>
+  </tr>
   <tr><th> Libscore: </th>
     <td><img src='/libscore/s/jQuery.svg' alt=''/></td>
     <td><code>https://img.shields.io/libscore/s/jQuery.svg</code></td>
