Add CocoaPods downloads badges.

--- a/try.html
+++ b/try.html
@@ -391,6 +391,18 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/website-up-down-green-red/http/shields.io.svg' alt=''/></td>
   <td><code>https://img.shields.io/website-up-down-green-red/http/shields.io.svg</code></td>
   </tr>
+  <tr><th data-keywords='cocoapods'> CocoaPods: </th>
+    <td><img src='/cocoapods/dt/AFNetworking.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/dt/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th data-keywords='cocoapods'> CocoaPods: </th>
+    <td><img src='/cocoapods/dm/AFNetworking.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/dm/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th data-keywords='cocoapods'> CocoaPods: </th>
+    <td><img src='/cocoapods/dw/AFNetworking.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/dw/AFNetworking.svg</code></td>
+  </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
