Add CocoaPods apps badges.

--- a/try.html
+++ b/try.html
@@ -858,6 +858,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/bithound/devDependencies/github/rexxars/sse-channel.svg</code></td>
   </tr>
   <tr><th> CocoaPods: </th>
+    <td><img src='/cocoapods/at/AFNetworking.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/at/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='/cocoapods/aw/AFNetworking.svg' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/aw/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
     <td><img src='/cocoapods/p/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
   </tr>
