--- a/index.html
+++ b/index.html
@@ -707,13 +707,21 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
   </tr>
-  <tr><th> Codacy: </th>
-    <td><img src='https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg?maxAge=2592000' alt=''/></td>
-    <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
+  <tr><th> Codacy grade: </th>
+    <td><img src='https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
   </tr>
-  <tr><th> Codacy branch: </th>
-    <td><img src='https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686/master.svg?maxAge=2592000' alt=''/></td>
-    <td><code>https://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686/master.svg</code></td>
+  <tr><th> Codacy branch grade: </th>
+    <td><img src='https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686/master.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686/master.svg</code></td>
+  </tr>
+  <tr><th> Codacy coverage: </th>
+    <td><img src='https://img.shields.io/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd.svg</code></td>
+  </tr>
+  <tr><th> Codacy branch coverage: </th>
+    <td><img src='https://img.shields.io/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd/master.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd/master.svg</code></td>
   </tr>
   <tr><th> Libscore: </th>
     <td><img src='https://img.shields.io/libscore/s/jQuery.svg?maxAge=2592000' alt=''/></td>
