--- a/try.html
+++ b/try.html
@@ -707,19 +707,19 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
   </tr>
   <tr><th> Codacy grade: </th>
-    <td><img src='https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
+    <td><img src='/codacy/grade/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
     <td><code>https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
   </tr>
   <tr><th> Codacy branch grade: </th>
-    <td><img src='https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686/master.svg' alt=''/></td>
+    <td><img src='/codacy/grade/e27821fb6289410b8f58338c7e0bc686/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686/master.svg</code></td>
   </tr>
   <tr><th> Codacy coverage: </th>
-    <td><img src='https://img.shields.io/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd.svg' alt=''/></td>
+    <td><img src='/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd.svg' alt=''/></td>
     <td><code>https://img.shields.io/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd.svg</code></td>
   </tr>
   <tr><th> Codacy branch coverage: </th>
-    <td><img src='https://img.shields.io/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd/master.svg' alt=''/></td>
+    <td><img src='/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd/master.svg' alt=''/></td>
     <td><code>https://img.shields.io/codacy/coverage/c44df2d9c89a4809896914fd1a40bedd/master.svg</code></td>
   </tr>
   <tr><th> Libscore: </th>
