--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@ is where the current server got started.
 </main>
 
 <dialog id='copyDialog'>
-<form id='copyForm'>
+<form id='copyForm' action='javascript:void 0'>
   <p><img id='copyImg'>
   </p><p><label> Link <input type='url' name='url'/></label>
   </p><p><label> Image <input type='url' name='img'/></label>
@@ -1038,33 +1038,33 @@ is where the current server got started.
        <code>https://img.shields.io/website/http/www.website.com/path/to/page.html.svg</code>.
     </p>
     <p>The URLREST should be URLEncoded:<br>
-       <input type="text" id="websiteDocUrlField" placeholder="Paste your URL (without the protocol) here" /><br>
-       <input type="button" onclick="(function(el) { el.value = encodeURIComponent(el.value); })(document.getElementById('websiteDocUrlField'))" value="Encode" />
-       <input type="button" onclick="(function(el) { el.value = decodeURIComponent(el.value); })(document.getElementById('websiteDocUrlField'))" value="Decode" />
+      <input type="text" id="websiteDocUrlField" placeholder="Paste your URL (without the protocol) here" /><br>
+      <button onclick="(function(el) { el.value = encodeURIComponent(el.value); })(document.getElementById('websiteDocUrlField'))">Encode</button>
+      <button onclick="(function(el) { el.value = decodeURIComponent(el.value); })(document.getElementById('websiteDocUrlField'))">Decode</button>
     </p>
     <p><code>[OPTIONS]</code> can be:
-       <ul>
-         <li>Nothing:
-             <code>…/website/…</code></li>
-         <li>Online and offline text:
-             <code>…/website-up-down/…</code></li>
-         <li>Online and offline text, then online and offline colors:
-             <code>…/website-up-down-green-orange/…</code></li>
-       </ul>
-       <table class=centered><tbody>
-           <tr><td>   Dashes <code>--</code>
-             </td><td>  →
-             </td><td>  <code>-</code> Dash
-           </td></tr>
-           <tr><td>   Underscores <code>__</code>
-             </td><td>  →
-             </td><td>  <code>_</code> Underscore <br/>
-           </td></tr>
-           <tr><td>   <code>_</code> or Space <code>&nbsp;</code>
-             </td><td>  →
-             </td><td>  <code>&nbsp;</code> Space
-           </td></tr>
-       </tbody></table>
+      <ul>
+        <li>Nothing:
+            <code>…/website/…</code></li>
+        <li>Online and offline text:
+            <code>…/website-up-down/…</code></li>
+        <li>Online and offline text, then online and offline colors:
+            <code>…/website-up-down-green-orange/…</code></li>
+      </ul>
+      <table class=centered><tbody>
+          <tr><td>   Dashes <code>--</code>
+            </td><td>  →
+            </td><td>  <code>-</code> Dash
+          </td></tr>
+          <tr><td>   Underscores <code>__</code>
+            </td><td>  →
+            </td><td>  <code>_</code> Underscore <br/>
+          </td></tr>
+          <tr><td>   <code>_</code> or Space <code>&nbsp;</code>
+            </td><td>  →
+            </td><td>  <code>&nbsp;</code> Space
+          </td></tr>
+      </tbody></table>
     </p>
   </div>
 </div>
