--- a/try.html
+++ b/try.html
@@ -388,8 +388,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
   <tr><th data-keywords='website' data-doc='websiteDoc'> Website: </th>
-  <td><img src='/website-up-down-green-red/http/shields.io.svg' alt=''/></td>
-  <td><code>https://img.shields.io/website-up-down-green-red/http/shields.io.svg</code></td>
+    <td><img src='/website-up-down-green-red/http/shields.io.svg' alt=''/></td>
+    <td><code>https://img.shields.io/website-up-down-green-red/http/shields.io.svg</code></td>
   </tr>
   <tr><th data-keywords='cocoapods'> CocoaPods: </th>
     <td><img src='/cocoapods/dt/AFNetworking.svg' alt='' /></td>
@@ -402,6 +402,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='cocoapods'> CocoaPods: </th>
     <td><img src='/cocoapods/dw/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/dw/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox'> Mozilla Addons: </th>
+    <td><img src='/amo/d/dustman.svg' alt=''/></td>
+    <td><code>https://img.shields.io/amo/d/dustman.svg</code></td>
   </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
@@ -553,6 +557,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> homebrew: </th>
   <td><img src='/homebrew/v/cake.svg' alt=''/></td>
   <td><code>https://img.shields.io/homebrew/v/cake.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox'> Mozilla Addons: </th>
+  <td><img src='/amo/v/dustman.svg' alt=''/></td>
+  <td><code>https://img.shields.io/amo/v/dustman.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -864,6 +872,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='aur'> AUR: </th>
     <td><img src='/aur/votes/yaourt.svg' alt=''/></td>
     <td><code>https://img.shields.io/aur/votes/yaourt.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox'> Mozilla Addons: </th>
+    <td><img src='/amo/users/dustman.svg' alt=''/></td>
+    <td><code>https://img.shields.io/amo/users/dustman.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox'> Mozilla Addons: </th>
+    <td><img src='/amo/rating/dustman.svg' alt=''/></td>
+    <td><code>https://img.shields.io/amo/rating/dustman.svg</code></td>
   </tr>
 </tbody></table>
 
