Add Mozilla Addons support

--- a/try.html
+++ b/try.html
@@ -384,12 +384,16 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/packagecontrol/dt/Package%20Control.svg</code></td>
   </tr>
   <tr><th data-keywords='chrome'> Chrome Web Store: </th>
-    <td><img src='/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg' alt=''/></td>
-    <td><code>https://img.shields.io/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
+  <td><img src='/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg' alt=''/></td>
+  <td><code>https://img.shields.io/chrome-web-store/d/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
   <tr><th data-keywords='website' data-doc='websiteDoc'> Website: </th>
   <td><img src='/website-up-down-green-red/http/shields.io.svg' alt=''/></td>
   <td><code>https://img.shields.io/website-up-down-green-red/http/shields.io.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox mozilla'> Mozilla Addons:: </th>
+  <td><img src='/amo/d/dustman.svg' alt=''/></td>
+  <td><code>https://img.shields.io/amo/d/dustman.svg</code></td>
   </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
@@ -537,6 +541,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> homebrew: </th>
   <td><img src='/homebrew/v/cake.svg' alt=''/></td>
   <td><code>https://img.shields.io/homebrew/v/cake.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox mozilla'> Mozilla Addons: </th>
+  <td><img src='/amo/v/dustman.svg' alt=''/></td>
+  <td><code>https://img.shields.io/amo/v/dustman.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -816,6 +824,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='aur'> AUR: </th>
     <td><img src='/aur/votes/yaourt.svg' alt=''/></td>
     <td><code>https://img.shields.io/aur/votes/yaourt.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox mozilla'> Mozilla Addons: </th>
+    <td><img src='/amo/users/dustman.svg' alt=''/></td>
+    <td><code>https://img.shields.io/amo/users/dustman.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox mozilla'> Mozilla Addons: </th>
+    <td><img src='/amo/rating/dustman.svg' alt=''/></td>
+    <td><code>https://img.shields.io/amo/rating/dustman.svg</code></td>
   </tr>
 </tbody></table>
 
