--- a/index.html
+++ b/index.html
@@ -392,6 +392,18 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/website-up-down-green-red/http/shields.io.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/website-up-down-green-red/http/shields.io.svg</code></td>
   </tr>
+  <tr><th data-keywords='cocoapods'> CocoaPods: </th>
+    <td><img src='https://img.shields.io/cocoapods/dt/AFNetworking.svg?maxAge=2592000' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/dt/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th data-keywords='cocoapods'> CocoaPods: </th>
+    <td><img src='https://img.shields.io/cocoapods/dm/AFNetworking.svg?maxAge=2592000' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/dm/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th data-keywords='cocoapods'> CocoaPods: </th>
+    <td><img src='https://img.shields.io/cocoapods/dw/AFNetworking.svg?maxAge=2592000' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/dw/AFNetworking.svg</code></td>
+  </tr>
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
@@ -845,6 +857,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> bitHound: </th>
     <td><img src='https://img.shields.io/bithound/devDependencies/github/rexxars/sse-channel.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/bithound/devDependencies/github/rexxars/sse-channel.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='https://img.shields.io/cocoapods/at/AFNetworking.svg?maxAge=2592000' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/at/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='https://img.shields.io/cocoapods/aw/AFNetworking.svg?maxAge=2592000' alt='' /></td>
+    <td><code>https://img.shields.io/cocoapods/aw/AFNetworking.svg</code></td>
   </tr>
   <tr><th> CocoaPods: </th>
     <td><img src='https://img.shields.io/cocoapods/p/AFNetworking.svg?maxAge=2592000' alt='' /></td>
